[gd_scene load_steps=9 format=3 uid="uid://bcdyawt7lfywt"]

[ext_resource type="Script" path="res://scripts/level_1.gd" id="1_jbvuy"]
[ext_resource type="PackedScene" uid="uid://c34abxc4q2lp0" path="res://scenes/door.tscn" id="2_hjdx1"]

[sub_resource type="BoxMesh" id="BoxMesh_u7i66"]
size = Vector3(10, 0.5, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_0ehc7"]
size = Vector3(10, 0.5, 10)

[sub_resource type="BoxMesh" id="BoxMesh_q3vhm"]
size = Vector3(1.5, 1.5, 1.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b3k2g"]
albedo_color = Color(0.698039, 0.501961, 0.25098, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_55qm2"]
size = Vector3(1.5, 1.5, 1.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_ptd7g"]
size = Vector3(3, 2, 3)

[node name="Level1" type="Node3D"]
script = ExtResource("1_jbvuy")

[node name="Environment" type="Node3D" parent="."]

[node name="Floor" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Floor"]
mesh = SubResource("BoxMesh_u7i66")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Floor"]
shape = SubResource("BoxShape3D_0ehc7")

[node name="Walls" type="Node3D" parent="Environment"]

[node name="WallNorth" type="StaticBody3D" parent="Environment/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Walls/WallNorth"]
transform = Transform3D(10, 0, 0, 0, 3, 0, 0, 0, 0.2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Walls/WallNorth"]
transform = Transform3D(10, 0, 0, 0, 3, 0, 0, 0, 0.2, 0, 0, 0)

[node name="WallSouth" type="StaticBody3D" parent="Environment/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Walls/WallSouth"]
transform = Transform3D(10, 0, 0, 0, 3, 0, 0, 0, 0.2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Walls/WallSouth"]
transform = Transform3D(10, 0, 0, 0, 3, 0, 0, 0, 0.2, 0, 0, 0)

[node name="WallEast" type="StaticBody3D" parent="Environment/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Walls/WallEast"]
transform = Transform3D(0.2, 0, 0, 0, 3, 0, 0, 0, 10.2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Walls/WallEast"]
transform = Transform3D(0.2, 0, 0, 0, 3, 0, 0, 0, 10.2, 0, 0, 0)

[node name="WallWest" type="StaticBody3D" parent="Environment/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Walls/WallWest"]
transform = Transform3D(0.2, 0, 0, 0, 3, 0, 0, 0, 10.2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Walls/WallWest"]
transform = Transform3D(0.2, 0, 0, 0, 3, 0, 0, 0, 10.2, 0, 0, 0)

[node name="Door" parent="." instance=ExtResource("2_hjdx1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)

[node name="PhysicsObjects" type="Node3D" parent="."]

[node name="Box" type="StaticBody3D" parent="PhysicsObjects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -2)
collision_layer = 2
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="PhysicsObjects/Box"]
mesh = SubResource("BoxMesh_q3vhm")
surface_material_override/0 = SubResource("StandardMaterial3D_b3k2g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PhysicsObjects/Box"]
shape = SubResource("BoxShape3D_55qm2")

[node name="BoxLabel" type="Label3D" parent="PhysicsObjects/Box"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0, 0)
pixel_size = 0.005
text = "Physics Box\n10 kg\nF = m × a"  
font_size = 48

[node name="InteractArea" type="Area3D" parent="PhysicsObjects/Box"]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="PhysicsObjects/Box/InteractArea"]
shape = SubResource("BoxShape3D_ptd7g")

[node name="QuestionUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Panel" type="Panel" parent="QuestionUI"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestionLabel" type="Label" parent="QuestionUI/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 100.0
grow_horizontal = 2
text = "The box has a mass of 10 kg and needs to be accelerated at 2 m/s² to move out of the way. What force is required?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="OptionsContainer" type="VBoxContainer" parent="QuestionUI/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="FeedbackLabel" type="Label" parent="QuestionUI/Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Select an answer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelInfo" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 60.0
text = "Level 1: Force Calculation
Approach the box to solve the physics puzzle."
